[package]
name = "stats"
version = "0.1.0"
edition = "2024"
links = "python3.13"

[lib]
name = "stats"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["extension-module", "abi3-py311"] }
rayon = "1.10"
numpy = "0.24.0"
ndarray = "0.16.1"

[build-dependencies]
pyo3-build-config = "0.24.1"

[package.metadata.maturin]
python-source = "python"
